# SeismicUnix

./: .gitignore  .nbattrs  README.git.instructions  README.md  Receiver motion correction  sugroll example
sac/sac-101.2/: CHANGES  HISTORY  License  Makefile  Makefile.am  Makefile.in  README  Readme.buildsac  config.status  configure  configure.in
sac/sac-101.2/aux/: clstd
sac/sac-101.2/aux/ctables/: color.tbl1.sac
sac/sac-101.2/aux/help/: .TEMPLATE  .intro  3c  about  add  addf  axes  bandpass  beginwindow  binoperr  border  capf  chnhdr  color  comcor  contents  convert  convolve  correlate  cutim  decimate  deletechannel  depmec  dif  div  divf  enddevices  endframe  envelope  fileid  filterdesign  fir  floor  funcgen  getbb  gtext  hanning  highpass  hlpintro  ifft  (+75 more)
sac/sac-101.2/config/: matlab.m4
sac/sac-101.2/doc/examples/: README  envelopec.c  envelopef.f  gethvc.c  rsac1c.c  wsac1c.c  wsac4c.c
sac/sac-101.2/inc/: EVRESPnames.h  SacHeader.h  TransferFcn.h  adobe1.30_b.h  adobe2.00_a.h  arrival.h  bbs.h  bom.h  cnd.h  cnv.h  color.h  com.h  comlists.h  complex.h  config.h  config.h.in  contouring.h  cpf.h  csf.h  cssListOps.h  cssListStrucs.h  cssb.h  datafilelist.h  dbBuildSQLstring.h  dbBuildSearchlink.h  dbErrorHandler.h  dblGetDataSubs.h  dblUserData.h  dbselect.h  dfir.h  dfm.h  dload.h  eam.h  evresp.h  exm.h  extfunc.h  fir.h  fks.h  gam.h  gc.h  (+56 more)
sac/sac-101.2/include/: sac.h  sacio.h
sac/sac-101.2/libedit/: License.BSD  Makefile  Makefile.am  Makefile.in  config.h.in
sac/sac-101.2/libedit/libedit-2.6.9/: Makefile  Makefile.in  config.cache  config.h  config.status  configure  editline.o_a  help.c  history.o_a  readline.o_a  tokenizer.o_a
sac/sac-101.2/macros/data/: alphatest  contourdata_alpha  elk_z_alpha  knb_z_am_alpha
sac/sac-101.2/macros/test/: all  graphics
sac/sac-101.2/src/: Makefile  Makefile.am  Makefile.in  describedirs  sac
sac/sac-101.2/src/SeisMgr/: smDBdata.c  smDataIO.c  smDataIO.h  smNoDBstubs.c  smWorkSets.c  stringfun.c  stringfun.h
sac/sac-101.2/src/amf/: allamb.c  iniam.c  reaamb.c  relamb.c
sac/sac-101.2/src/bbs/: createbbs.c  deletebbs.c  getbbv.c  inibbs.c  readbbf.c  setbbv.c  unsetbbv.c  writebbf.c
sac/sac-101.2/src/bom/: getbfl.c  getcfl.c  inibom.c  relbfl.c  xaddf.c  xboec.c  xbomc.c  xdivf.c  xmerge.c  xmulf.c  xsubf.c
sac/sac-101.2/src/bot/: capf.c  chpf.c  clipdp.c  crname.c  indexa.c  indexb.c  indexc.c  lequal.c  locdp.c  modcase.c  nequal.c  terminate.c  upcase.c  wrlist.c
sac/sac-101.2/src/clf/: fndelcl.c  ldelcl.c  lnumcl.c  lnxtcl.c  nfndcl.c  putcl.c
sac/sac-101.2/src/cnd/: getclun.c  getdolen.c  ldolist.c  skipdo.c  skipif.c  xbreak.c  xcndc.c  xdo.c  xelse.c  xelseif.c  xenddo.c  xendif.c  xif.c  xwhile.c
sac/sac-101.2/src/co/: backspace.c  complex.c  ext_init.c  fstrncpy.c  getfline.c  getline.c  izshft.c  math.c  select.c  stdu.h  strlcpy.c  strscpy.c  subscpy.c  tokenize.c  zauxfile.c  zbasename.c  zclose.c  zclosec.c  zcloses.c  zdest.c  zdestf.c  zexecute.c  zfiles.c  zgetc.c  zgetgd.c  zgimsg.c  zgpmsg.c  zgtmsg.c  zgwindowsize.c  zinfo.c  zinquire.c  zload.c  zmemad.c  znfile.c  znfiles.c  zopen.c  zopenc.c  zopens.c  zputc.c  zquit.c  (+9 more)
sac/sac-101.2/src/coda/: C_apply.c  C_bilin2.c  C_buroots.c  C_complex.c  C_cutoffs.c  C_design.c  C_fft.c  C_firtrn.c  C_fstrncpy.c  C_lp.c  C_lptbp.c  C_lptbr.c  C_lpthp.c  C_overlp.c  C_warp.c  C_wigint.c  C_xapiir.c  C_zshft.c  binary_op.c  calc_codaGF.c  calc_coda_amplitudes.c  calc_energy.c  calc_envelopes.c  calc_moment_magnitude.c  coda.h  coda_complex.h  fit_coda_amp.c  fit_coda_params.c  get_input.c  main.c  pickwindows.c  plotspec.c  sac_code.c  send_output.c  unary_op.c  xcoda.c
sac/sac-101.2/src/contouring/: alloclabels.c  allocpoints.c  allocsegments.c  calccontlab1.c  calccontlab4.c  calccontlabs.c  calccontrlink.c  calccontsegs.c  calccontticks.c  calclastpoint.c  calcsegangle.c  fastcontdata.c  getcontlabel.c  getcontpoint.c  getcontrlink.c  getcontseg.c  getcontseglab.c  initcontattr.c  linkcontsegs.c  listcontsegs.c  markcontlabel.c  mergecontsegs.c  newcontlabel.c  newcontpoint.c  newcontseg.c  nextcontseg.c  plotcontdata.c  plotcontsegs.c  pointsequal.c  putcontlabel.c  putcontpoint.c  putcontrlink.c  putcontseg.c  putcontseglab.c  releaselabels.c  releasepoints.c  releasesegmen.c  setcontdatali.c
sac/sac-101.2/src/cpf/: cerr.c  cfmt.c  cresp.c  csinit.c  cspop.c  cspush.c  cszero.c  ctype.c  gc.c  getarg.c  ictok.c  inicom.c  inicsf.c  initcomlists.c  initpf.c  iniusr.c  lcchar.c  lccl.c  lcdfl.c  lcia.c  lcidi.c  lcint.c  lcirc.c  lcircp.c  lckey.c  lckeyExact.c  lclist.c  lclog.c  lclog2.c  lcmore.c  lcquot.c  lcra.c  lcreal.c  lcrest.c  lcrrcp.c  lcrtw.c  lctok.c  lkchar.c  lkcharExact.c  lkentries.c  (+28 more)
sac/sac-101.2/src/datafilelist/: nextinputfile.c  selectinputfi.c  setinputmode.c  setinputmode.c1
sac/sac-101.2/src/dbh/: ACKNOWLEDGEMENT  afr.c  alias.c  append.c  apply.c  autcor.c  beroots.c  bilin2.c  buroots.c  c1roots.c  c2roots.c  chebparm.c  cpolar.c  crit.c  crscor.c  cutoffs.c  decim.c  design.c  dfr.c  dircor.c  edecim.c  fft.c  firtrn.c  gauss.c  getResponse.c  iirfilter.c  inspect.c  levin.c  levinD.c  linpack.c  lp.c  lptbp.c  lptbr.c  lpthp.c  mem.c  mlm.c  overlp.c  pds.c  pef.c  phaseshift.c  (+14 more)
sac/sac-101.2/src/dff/: f2c.c  formhv.c  formmarker.c  getfhv.c  getfil.c  gethv.c  getihv.c  getkhv.c  getlhv.c  getnfiles.c  getnhv.c  hdrfld.c  inihdr.c  inilhf.c  lgahdr.c  map_chdr_in.c  map_chdr_out.c  map_hdr_in.c  map_hdr_out.c  markhdr.c  newhdr.c  newstn.c  (+29 more)
sac/sac-101.2/utils/: Makefile  Makefile.am  Makefile.in  bbfswap  bbfswap.c  sac.h  saclst  sacswap  sacswap.c  unvis.c
src/sub/sub/: Comments  Makefile  Makefile.in  ReadMe  VanillaMakefile  arith2.c  arithops.c  bkrandom.c  brecord.c  brecord.h  config.status  configure  configure.in  datastak.c  debug.c  dft-npfa.c  dft-pfacc.c  dft.h  dftops.c  functions.h  init.c  iostuff.c  lexer.c  localsys.h  machine.c  mathfcns.c  opcodes.c  parser.c  parser.y  run.c  sub  sub.1  sub.c  sub.h  subinc.h  support.c  support.h  symbol.c  tpackage.c  traceops.c  (+4 more)
(+7436 files in other folders)
